--- a/core/ingest/pom.xml
+++ b/core/ingest/pom.xml
@@ -10,6 +10,10 @@
 	</parent>
 	<artifactId>geowave-core-ingest</artifactId>
 	<name>GeoWave Ingest Framework</name>
+	<properties>
+		<kafka.artifact>kafka_2.10</kafka.artifact>
+		<kafka.version>0.8.2.1</kafka.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.geotools</groupId>
@@ -52,6 +56,29 @@
 			<groupId>mil.nga.giat</groupId>
 			<artifactId>geowave-datastore-accumulo</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>${kafka.artifact}</artifactId>
+			<version>${kafka.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.zookeeper</groupId>
+					<artifactId>zookeeper</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.jdmk</groupId>
+					<artifactId>jmxtools</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.jmx</groupId>
+					<artifactId>jmxri</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	<build>
